[gd_scene load_steps=4 format=2]

[ext_resource path="res://drawing/ArcDrawer.tscn" type="PackedScene" id=1]
[ext_resource path="res://towers/Tower_Shooter.gd" type="Script" id=2]
[ext_resource path="res://drawing/RectDrawer.tscn" type="PackedScene" id=3]

[node name="Tower_Shooter" type="Node2D"]
script = ExtResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ArcDrawer" parent="." instance=ExtResource( 1 )]

[node name="RectDrawer" parent="." instance=ExtResource( 3 )]
line_width = 2.0
